// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XMLtoObject Converted actionbutton xml matches object 1`] = `
Object {
  "children": Array [],
  "content": Object {
    "label": "test",
    "triggers": Array [
      Object {
        "actions": Array [
          Object {
            "type": "viewer:alert",
            "value": Object {
              "message": "test",
              "title": "test",
            },
          },
        ],
        "type": "onClick",
      },
    ],
  },
  "id": null,
  "type": "ObojoboDraft.Chunks.ActionButton",
}
`;

exports[`XMLtoObject Converted assessment xml matches object 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "content": Object {},
      "id": null,
      "type": "ObojoboDraft.Pages.Page",
    },
    Object {
      "children": Array [],
      "content": Object {},
      "id": null,
      "type": "ObojoboDraft.Chunks.QuestionBank",
    },
  ],
  "content": Object {
    "rubric": Object {
      "failedResult": "0",
      "mods": Array [
        Object {
          "attemptCondition": "1",
          "reward": "5",
        },
        Object {
          "attemptCondition": "(1,$last_attempt]",
          "reward": "2",
        },
      ],
      "passedResult": "100",
      "passingAttemptScore": "80",
      "type": "pass-fail",
      "unableToPassResult": "$highest_attempt_score",
    },
    "scoreActions": Array [
      Object {
        "for": undefined,
        "from": "0",
        "page": Object {
          "children": Array [],
          "content": Object {},
          "id": null,
          "type": "ObojoboDraft.Pages.Page",
        },
        "to": "99",
      },
      Object {
        "for": "(99,100]",
        "from": undefined,
        "page": Object {
          "children": Array [],
          "content": Object {},
          "id": null,
          "type": "ObojoboDraft.Pages.Page",
        },
        "to": undefined,
      },
    ],
  },
  "id": null,
  "type": "ObojoboDraft.Sections.Assessment",
}
`;

exports[`XMLtoObject Converted break xml matches object 1`] = `
Object {
  "children": Array [],
  "content": Object {
    "headingLevel": 1,
    "textGroup": Array [
      Object {
        "data": null,
        "text": Object {
          "styleList": Array [],
          "value": "A break:",
        },
      },
    ],
  },
  "id": null,
  "type": "ObojoboDraft.Chunks.Heading",
}
`;

exports[`XMLtoObject Converted code xml matches object 1`] = `
Object {
  "children": Array [],
  "content": Object {
    "textGroup": Array [
      Object {
        "data": null,
        "text": Object {
          "styleList": Array [],
          "value": "test",
        },
      },
    ],
  },
  "id": null,
  "type": "ObojoboDraft.Chunks.Code",
}
`;

exports[`XMLtoObject Converted content xml matches object 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "content": Object {},
      "id": null,
      "type": "ObojoboDraft.Pages.Page",
    },
  ],
  "content": Object {},
  "id": null,
  "type": "ObojoboDraft.Sections.Content",
}
`;

exports[`XMLtoObject Converted figure xml matches object 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "content": Object {
        "alt": "A city",
        "size": "small",
        "textGroup": Array [
          Object {
            "data": null,
            "text": Object {
              "styleList": Array [],
              "value": "This is a small image",
            },
          },
        ],
        "url": "http://lorempixel.com/640/480/city",
      },
      "id": null,
      "type": "ObojoboDraft.Chunks.Figure",
    },
    Object {
      "children": Array [],
      "content": Object {
        "alt": "A city",
        "size": "custom",
        "textGroup": Array [
          Object {
            "data": null,
            "text": Object {
              "styleList": Array [],
              "value": "This is a small image",
            },
          },
        ],
        "url": "http://lorempixel.com/640/480/city",
        "width": 400,
      },
      "id": null,
      "type": "ObojoboDraft.Chunks.Figure",
    },
    Object {
      "children": Array [],
      "content": Object {
        "alt": "A city",
        "height": 400,
        "size": "custom",
        "textGroup": Array [
          Object {
            "data": null,
            "text": Object {
              "styleList": Array [],
              "value": "This is a small image",
            },
          },
        ],
        "url": "http://lorempixel.com/640/480/city",
      },
      "id": null,
      "type": "ObojoboDraft.Chunks.Figure",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": Object {
            "size": "custom",
            "url": "someSrc",
            "width": 50,
          },
          "id": null,
          "type": "ObojoboDraft.Chunks.Figure",
        },
      ],
      "content": Object {},
      "id": null,
      "type": "ObojoboDraft.Chunks.Figure",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": Object {
            "size": "custom",
            "url": "someSrc",
          },
          "id": null,
          "type": "ObojoboDraft.Chunks.Figure",
        },
      ],
      "content": Object {},
      "id": null,
      "type": "ObojoboDraft.Chunks.Figure",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": Object {
            "size": "medium",
            "url": "someSrc",
          },
          "id": null,
          "type": "ObojoboDraft.Chunks.Figure",
        },
      ],
      "content": Object {
        "figcaption": Array [
          Object {
            "text": "someCaption",
            "type": "text",
          },
        ],
      },
      "id": null,
      "type": "ObojoboDraft.Chunks.Figure",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": Object {
            "size": "large",
            "url": "someSrc",
          },
          "id": null,
          "type": "ObojoboDraft.Chunks.Figure",
        },
      ],
      "content": Object {
        "figcaption": Array [
          Object {
            "text": "someCaption",
            "type": "text",
          },
        ],
      },
      "id": null,
      "type": "ObojoboDraft.Chunks.Figure",
    },
  ],
  "content": Object {},
  "id": null,
  "type": "ObojoboDraft.Modules.Module",
}
`;

exports[`XMLtoObject Converted heading xml matches object 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "content": Object {
        "headingLevel": 1,
        "textGroup": Array [
          Object {
            "data": null,
            "text": Object {
              "styleList": Array [],
              "value": "This is a test",
            },
          },
        ],
      },
      "id": null,
      "type": "ObojoboDraft.Chunks.Heading",
    },
    Object {
      "children": Array [],
      "content": Object {
        "headingLevel": 2,
        "textGroup": Array [
          Object {
            "data": Object {
              "align": "center",
            },
            "text": Object {
              "styleList": Array [],
              "value": "This is a test",
            },
          },
        ],
      },
      "id": null,
      "type": "ObojoboDraft.Chunks.Heading",
    },
    Object {
      "children": Array [],
      "content": Object {
        "headingLevel": 3,
        "textGroup": Array [
          Object {
            "data": Object {
              "align": "left",
            },
            "text": Object {
              "styleList": Array [],
              "value": "This is a test",
            },
          },
        ],
      },
      "id": null,
      "type": "ObojoboDraft.Chunks.Heading",
    },
    Object {
      "children": Array [],
      "content": Object {
        "headingLevel": 4,
        "textGroup": Array [
          Object {
            "data": Object {
              "align": "right",
            },
            "text": Object {
              "styleList": Array [],
              "value": "This is a test",
            },
          },
        ],
      },
      "id": null,
      "type": "ObojoboDraft.Chunks.Heading",
    },
    Object {
      "children": Array [],
      "content": Object {
        "headingLevel": 5,
        "textGroup": Array [
          Object {
            "data": null,
            "text": Object {
              "styleList": Array [],
              "value": "This is a test",
            },
          },
        ],
      },
      "id": null,
      "type": "ObojoboDraft.Chunks.Heading",
    },
    Object {
      "children": Array [],
      "content": Object {
        "headingLevel": 6,
        "textGroup": Array [
          Object {
            "data": null,
            "text": Object {
              "styleList": Array [],
              "value": "This is a test",
            },
          },
        ],
      },
      "id": null,
      "type": "ObojoboDraft.Chunks.Heading",
    },
  ],
  "content": Object {},
  "id": null,
  "type": "ObojoboDraft.Modules.Module",
}
`;

exports[`XMLtoObject Converted html xml matches object 1`] = `
Object {
  "children": Array [],
  "content": Object {
    "html": "<marquee><font color='red'>Hello, I am rendered HTML</font></marquee>",
  },
  "id": null,
  "type": "ObojoboDraft.Chunks.HTML",
}
`;

exports[`XMLtoObject Converted list xml matches object 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "content": Object {
        "listStyles": Object {
          "type": "ordered",
        },
        "textGroup": Array [
          Object {
            "data": Object {
              "indent": "4",
              "start": "1",
            },
            "text": Object {
              "styleList": Array [],
              "value": "This is a test",
            },
          },
          Object {
            "data": null,
            "text": Object {
              "styleList": Array [],
              "value": "This is a test",
            },
          },
        ],
      },
      "id": null,
      "type": "ObojoboDraft.Chunks.List",
    },
    Object {
      "children": Array [],
      "content": Object {
        "listStyles": Object {
          "type": "unordered",
        },
        "textGroup": Array [
          Object {
            "data": Object {
              "indent": "2",
            },
            "text": Object {
              "styleList": Array [],
              "value": "This is a test",
            },
          },
          Object {
            "data": null,
            "text": Object {
              "styleList": Array [],
              "value": "This is a test",
            },
          },
        ],
      },
      "id": null,
      "type": "ObojoboDraft.Chunks.List",
    },
  ],
  "content": Object {},
  "id": null,
  "type": "ObojoboDraft.Modules.Module",
}
`;

exports[`XMLtoObject Converted mathequation xml matches object 1`] = `
Object {
  "children": Array [],
  "content": Object {
    "align": "left",
    "latex": "x=v_xt",
  },
  "id": null,
  "type": "ObojoboDraft.Chunks.MathEquation",
}
`;

exports[`XMLtoObject Converted mcanswer xml matches object 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "content": Object {
        "textGroup": Array [
          Object {
            "data": null,
            "text": Object {
              "styleList": Array [],
              "value": "This is a test answer.",
            },
          },
        ],
      },
      "id": null,
      "type": "ObojoboDraft.Chunks.Text",
    },
    Object {
      "children": Array [],
      "content": Object {
        "align": "left",
        "latex": "x=v_xt",
      },
      "id": null,
      "type": "ObojoboDraft.Chunks.MathEquation",
    },
  ],
  "content": Object {},
  "id": null,
  "type": "ObojoboDraft.Chunks.MCAssessment.MCAnswer",
}
`;

exports[`XMLtoObject Converted mcassessment xml matches object 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [],
                  "content": Object {
                    "align": "left",
                    "latex": "x=v_xt",
                  },
                  "id": null,
                  "type": "ObojoboDraft.Chunks.MathEquation",
                },
              ],
              "content": Object {},
              "id": null,
              "type": "ObojoboDraft.Chunks.MCAssessment.MCAnswer",
            },
          ],
          "content": Object {
            "score": 100,
          },
          "id": null,
          "type": "ObojoboDraft.Chunks.MCAssessment.MCChoice",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [],
                  "content": Object {
                    "textGroup": Array [
                      Object {
                        "data": null,
                        "text": Object {
                          "styleList": Array [],
                          "value": "This is a test question.",
                        },
                      },
                    ],
                  },
                  "id": null,
                  "type": "ObojoboDraft.Chunks.Text",
                },
              ],
              "content": Object {},
              "id": null,
              "type": "ObojoboDraft.Chunks.MCAssessment.MCAnswer",
            },
          ],
          "content": Object {
            "score": 100,
          },
          "id": null,
          "type": "ObojoboDraft.Chunks.MCAssessment.MCChoice",
        },
      ],
      "content": Object {
        "responseType": "pick-one",
      },
      "id": null,
      "type": "ObojoboDraft.Chunks.MCAssessment",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [],
                  "content": Object {
                    "align": "right",
                    "latex": "x=v_xt",
                  },
                  "id": null,
                  "type": "ObojoboDraft.Chunks.MathEquation",
                },
              ],
              "content": Object {},
              "id": null,
              "type": "ObojoboDraft.Chunks.MCAssessment.MCAnswer",
            },
          ],
          "content": Object {
            "score": 100,
          },
          "id": null,
          "type": "ObojoboDraft.Chunks.MCAssessment.MCChoice",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [],
                  "content": Object {
                    "textGroup": Array [
                      Object {
                        "data": null,
                        "text": Object {
                          "styleList": Array [],
                          "value": "This is a test question.",
                        },
                      },
                    ],
                  },
                  "id": null,
                  "type": "ObojoboDraft.Chunks.Text",
                },
              ],
              "content": Object {},
              "id": null,
              "type": "ObojoboDraft.Chunks.MCAssessment.MCAnswer",
            },
          ],
          "content": Object {
            "score": 100,
          },
          "id": null,
          "type": "ObojoboDraft.Chunks.MCAssessment.MCChoice",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [],
                  "content": Object {
                    "textGroup": Array [
                      Object {
                        "data": null,
                        "text": Object {
                          "styleList": Array [],
                          "value": "This is a test question.",
                        },
                      },
                    ],
                  },
                  "id": null,
                  "type": "ObojoboDraft.Chunks.Text",
                },
              ],
              "content": Object {},
              "id": null,
              "type": "ObojoboDraft.Chunks.MCAssessment.MCAnswer",
            },
          ],
          "content": Object {
            "score": 0,
          },
          "id": null,
          "type": "ObojoboDraft.Chunks.MCAssessment.MCChoice",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [],
                  "content": Object {
                    "textGroup": Array [
                      Object {
                        "data": null,
                        "text": Object {
                          "styleList": Array [],
                          "value": "This is a test question.",
                        },
                      },
                    ],
                  },
                  "id": null,
                  "type": "ObojoboDraft.Chunks.Text",
                },
              ],
              "content": Object {},
              "id": null,
              "type": "ObojoboDraft.Chunks.MCAssessment.MCAnswer",
            },
          ],
          "content": Object {
            "score": 0,
          },
          "id": null,
          "type": "ObojoboDraft.Chunks.MCAssessment.MCChoice",
        },
      ],
      "content": Object {
        "responseType": "pick-one-multiple-correct",
      },
      "id": null,
      "type": "ObojoboDraft.Chunks.MCAssessment",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [],
                  "content": Object {
                    "align": "right",
                    "latex": "x=v_xt",
                  },
                  "id": null,
                  "type": "ObojoboDraft.Chunks.MathEquation",
                },
              ],
              "content": Object {},
              "id": null,
              "type": "ObojoboDraft.Chunks.MCAssessment.MCAnswer",
            },
          ],
          "content": Object {
            "score": 100,
          },
          "id": null,
          "type": "ObojoboDraft.Chunks.MCAssessment.MCChoice",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [],
                  "content": Object {
                    "textGroup": Array [
                      Object {
                        "data": null,
                        "text": Object {
                          "styleList": Array [],
                          "value": "This is a test question.",
                        },
                      },
                    ],
                  },
                  "id": null,
                  "type": "ObojoboDraft.Chunks.Text",
                },
              ],
              "content": Object {},
              "id": null,
              "type": "ObojoboDraft.Chunks.MCAssessment.MCAnswer",
            },
          ],
          "content": Object {
            "score": 100,
          },
          "id": null,
          "type": "ObojoboDraft.Chunks.MCAssessment.MCChoice",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [],
                  "content": Object {
                    "textGroup": Array [
                      Object {
                        "data": null,
                        "text": Object {
                          "styleList": Array [],
                          "value": "This is a test question.",
                        },
                      },
                    ],
                  },
                  "id": null,
                  "type": "ObojoboDraft.Chunks.Text",
                },
              ],
              "content": Object {},
              "id": null,
              "type": "ObojoboDraft.Chunks.MCAssessment.MCAnswer",
            },
          ],
          "content": Object {
            "score": 0,
          },
          "id": null,
          "type": "ObojoboDraft.Chunks.MCAssessment.MCChoice",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [],
                  "content": Object {
                    "textGroup": Array [
                      Object {
                        "data": null,
                        "text": Object {
                          "styleList": Array [],
                          "value": "This is a test question.",
                        },
                      },
                    ],
                  },
                  "id": null,
                  "type": "ObojoboDraft.Chunks.Text",
                },
              ],
              "content": Object {},
              "id": null,
              "type": "ObojoboDraft.Chunks.MCAssessment.MCAnswer",
            },
          ],
          "content": Object {
            "score": 0,
          },
          "id": null,
          "type": "ObojoboDraft.Chunks.MCAssessment.MCChoice",
        },
      ],
      "content": Object {
        "responseType": "pick-all",
      },
      "id": null,
      "type": "ObojoboDraft.Chunks.MCAssessment",
    },
  ],
  "content": Object {},
  "id": null,
  "type": "ObojoboDraft.Modules.Module",
}
`;

exports[`XMLtoObject Converted mcchoice xml matches object 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": Object {
            "align": "left",
            "latex": "x=v_xt",
          },
          "id": null,
          "type": "ObojoboDraft.Chunks.MathEquation",
        },
      ],
      "content": Object {},
      "id": null,
      "type": "ObojoboDraft.Chunks.MCAssessment.MCAnswer",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": Object {
            "textGroup": Array [
              Object {
                "data": null,
                "text": Object {
                  "styleList": Array [],
                  "value": "Good job!",
                },
              },
            ],
          },
          "id": null,
          "type": "ObojoboDraft.Chunks.Text",
        },
      ],
      "content": Object {},
      "id": null,
      "type": "ObojoboDraft.Chunks.MCAssessment.MCFeedback",
    },
  ],
  "content": Object {
    "score": 100,
  },
  "id": null,
  "type": "ObojoboDraft.Chunks.MCAssessment.MCChoice",
}
`;

exports[`XMLtoObject Converted mcfeedback xml matches object 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "content": Object {
        "textGroup": Array [
          Object {
            "data": null,
            "text": Object {
              "styleList": Array [],
              "value": "This is test feedback.",
            },
          },
        ],
      },
      "id": null,
      "type": "ObojoboDraft.Chunks.Text",
    },
    Object {
      "children": Array [],
      "content": Object {
        "align": "left",
        "latex": "x=v_xt",
      },
      "id": null,
      "type": "ObojoboDraft.Chunks.MathEquation",
    },
  ],
  "content": Object {},
  "id": null,
  "type": "ObojoboDraft.Chunks.MCAssessment.MCFeedback",
}
`;

exports[`XMLtoObject Converted module xml matches object 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": Object {},
          "id": null,
          "type": "ObojoboDraft.Sections.Content",
        },
      ],
      "content": Object {
        "title": "test",
      },
      "id": null,
      "type": "ObojoboDraft.Modules.Module",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": Object {},
              "id": null,
              "type": "ObojoboDraft.Pages.Page",
            },
            Object {
              "children": Array [],
              "content": Object {},
              "id": null,
              "type": "ObojoboDraft.Chunks.QuestionBank",
            },
          ],
          "content": Object {
            "scoreActions": Array [
              Object {
                "for": undefined,
                "from": "0",
                "page": Object {
                  "children": Array [],
                  "content": Object {},
                  "id": null,
                  "type": "ObojoboDraft.Pages.Page",
                },
                "to": "99",
              },
            ],
          },
          "id": null,
          "type": "ObojoboDraft.Sections.Assessment",
        },
      ],
      "content": Object {
        "title": "test",
      },
      "id": null,
      "type": "ObojoboDraft.Modules.Module",
    },
  ],
  "content": Object {},
  "id": null,
  "type": "ObojoboDraft.Modules.Module",
}
`;

exports[`XMLtoObject Converted native-type xml matches object 1`] = `
Object {
  "children": Array [],
  "content": Object {
    "textGroup": Array [
      Object {
        "data": null,
        "text": Object {
          "styleList": Array [],
          "value": "33333333333333333333333333333333333333",
        },
      },
      Object {
        "data": null,
        "text": Object {
          "styleList": Array [],
          "value": "True",
        },
      },
      Object {
        "data": null,
        "text": Object {
          "styleList": Array [],
          "value": "0.33333333333333333333333",
        },
      },
      Object {
        "data": null,
        "text": Object {
          "styleList": Array [],
          "value": "0.3",
        },
      },
    ],
  },
  "id": null,
  "type": "ObojoboDraft.Chunks.Text",
}
`;

exports[`XMLtoObject Converted page xml matches object 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "content": Object {},
      "id": null,
      "type": "ObojoboDraft.Chunks.Text",
    },
  ],
  "content": Object {
    "title": "test",
  },
  "id": null,
  "type": "ObojoboDraft.Pages.Page",
}
`;

exports[`XMLtoObject Converted question xml matches object 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "content": Object {
        "textGroup": Array [
          Object {
            "data": null,
            "text": Object {
              "styleList": Array [],
              "value": "test",
            },
          },
        ],
      },
      "id": null,
      "type": "ObojoboDraft.Chunks.Text",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [],
                  "content": Object {
                    "textGroup": Array [
                      Object {
                        "data": null,
                        "text": Object {
                          "styleList": Array [],
                          "value": "Correct",
                        },
                      },
                    ],
                  },
                  "id": null,
                  "type": "ObojoboDraft.Chunks.Text",
                },
              ],
              "content": Object {},
              "id": null,
              "type": "ObojoboDraft.Chunks.MCAssessment.MCAnswer",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [],
                  "content": Object {
                    "textGroup": Array [
                      Object {
                        "data": null,
                        "text": Object {
                          "styleList": Array [],
                          "value": "Correct",
                        },
                      },
                    ],
                  },
                  "id": null,
                  "type": "ObojoboDraft.Chunks.Text",
                },
              ],
              "content": Object {},
              "id": null,
              "type": "ObojoboDraft.Chunks.MCAssessment.MCFeedback",
            },
          ],
          "content": Object {
            "score": 100,
          },
          "id": null,
          "type": "ObojoboDraft.Chunks.MCAssessment.MCChoice",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [],
                  "content": Object {
                    "textGroup": Array [
                      Object {
                        "data": null,
                        "text": Object {
                          "styleList": Array [],
                          "value": "Incorrect",
                        },
                      },
                    ],
                  },
                  "id": null,
                  "type": "ObojoboDraft.Chunks.Text",
                },
              ],
              "content": Object {},
              "id": null,
              "type": "ObojoboDraft.Chunks.MCAssessment.MCAnswer",
            },
          ],
          "content": Object {
            "score": 0,
          },
          "id": null,
          "type": "ObojoboDraft.Chunks.MCAssessment.MCChoice",
        },
      ],
      "content": Object {
        "responseType": "pick-one",
      },
      "id": null,
      "type": "ObojoboDraft.Chunks.MCAssessment",
    },
  ],
  "content": Object {
    "solution": Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": Object {
            "textGroup": Array [
              Object {
                "data": null,
                "text": Object {
                  "styleList": Array [],
                  "value": "This is a description of the solution to the problem.",
                },
              },
            ],
          },
          "id": null,
          "type": "ObojoboDraft.Chunks.Text",
        },
      ],
      "content": Object {},
      "id": null,
      "type": "ObojoboDraft.Pages.Page",
    },
  },
  "id": null,
  "type": "ObojoboDraft.Chunks.Question",
}
`;

exports[`XMLtoObject Converted questionbank xml matches object 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [],
                          "content": Object {
                            "textGroup": Array [
                              Object {
                                "data": null,
                                "text": Object {
                                  "styleList": Array [],
                                  "value": "Correct",
                                },
                              },
                            ],
                          },
                          "id": null,
                          "type": "ObojoboDraft.Chunks.Text",
                        },
                      ],
                      "content": Object {},
                      "id": null,
                      "type": "ObojoboDraft.Chunks.MCAssessment.MCAnswer",
                    },
                  ],
                  "content": Object {
                    "score": 100,
                  },
                  "id": null,
                  "type": "ObojoboDraft.Chunks.MCAssessment.MCChoice",
                },
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [],
                          "content": Object {
                            "textGroup": Array [
                              Object {
                                "data": null,
                                "text": Object {
                                  "styleList": Array [],
                                  "value": "Incorrect",
                                },
                              },
                            ],
                          },
                          "id": null,
                          "type": "ObojoboDraft.Chunks.Text",
                        },
                      ],
                      "content": Object {},
                      "id": null,
                      "type": "ObojoboDraft.Chunks.MCAssessment.MCAnswer",
                    },
                  ],
                  "content": Object {
                    "score": 0,
                  },
                  "id": null,
                  "type": "ObojoboDraft.Chunks.MCAssessment.MCChoice",
                },
              ],
              "content": Object {
                "responseType": "pick-one",
              },
              "id": null,
              "type": "ObojoboDraft.Chunks.MCAssessment",
            },
          ],
          "content": Object {},
          "id": null,
          "type": "ObojoboDraft.Chunks.Question",
        },
      ],
      "content": Object {},
      "id": null,
      "type": "ObojoboDraft.Chunks.QuestionBank",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [],
                  "content": Object {
                    "textGroup": Array [
                      Object {
                        "data": null,
                        "text": Object {
                          "styleList": Array [],
                          "value": "Question Bank 1 Question 1 - This is the first question you'll see",
                        },
                      },
                    ],
                  },
                  "id": null,
                  "type": "ObojoboDraft.Chunks.Text",
                },
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "children": Array [],
                              "content": Object {
                                "textGroup": Array [
                                  Object {
                                    "data": null,
                                    "text": Object {
                                      "styleList": Array [],
                                      "value": "Correct",
                                    },
                                  },
                                ],
                              },
                              "id": null,
                              "type": "ObojoboDraft.Chunks.Text",
                            },
                          ],
                          "content": Object {},
                          "id": null,
                          "type": "ObojoboDraft.Chunks.MCAssessment.MCAnswer",
                        },
                      ],
                      "content": Object {
                        "score": 100,
                      },
                      "id": null,
                      "type": "ObojoboDraft.Chunks.MCAssessment.MCChoice",
                    },
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "children": Array [],
                              "content": Object {
                                "textGroup": Array [
                                  Object {
                                    "data": null,
                                    "text": Object {
                                      "styleList": Array [],
                                      "value": "Incorrect",
                                    },
                                  },
                                ],
                              },
                              "id": null,
                              "type": "ObojoboDraft.Chunks.Text",
                            },
                          ],
                          "content": Object {},
                          "id": null,
                          "type": "ObojoboDraft.Chunks.MCAssessment.MCAnswer",
                        },
                      ],
                      "content": Object {
                        "score": 0,
                      },
                      "id": null,
                      "type": "ObojoboDraft.Chunks.MCAssessment.MCChoice",
                    },
                  ],
                  "content": Object {
                    "responseType": "pick-one",
                  },
                  "id": null,
                  "type": "ObojoboDraft.Chunks.MCAssessment",
                },
              ],
              "content": Object {},
              "id": null,
              "type": "ObojoboDraft.Chunks.Question",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [],
                  "content": Object {
                    "textGroup": Array [
                      Object {
                        "data": null,
                        "text": Object {
                          "styleList": Array [],
                          "value": "Question Bank 1 Question 2 - This is the fourth question you'll see",
                        },
                      },
                    ],
                  },
                  "id": null,
                  "type": "ObojoboDraft.Chunks.Text",
                },
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "children": Array [],
                              "content": Object {
                                "textGroup": Array [
                                  Object {
                                    "data": null,
                                    "text": Object {
                                      "styleList": Array [],
                                      "value": "Correct",
                                    },
                                  },
                                ],
                              },
                              "id": null,
                              "type": "ObojoboDraft.Chunks.Text",
                            },
                          ],
                          "content": Object {},
                          "id": null,
                          "type": "ObojoboDraft.Chunks.MCAssessment.MCAnswer",
                        },
                      ],
                      "content": Object {
                        "score": 100,
                      },
                      "id": null,
                      "type": "ObojoboDraft.Chunks.MCAssessment.MCChoice",
                    },
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "children": Array [],
                              "content": Object {
                                "textGroup": Array [
                                  Object {
                                    "data": null,
                                    "text": Object {
                                      "styleList": Array [],
                                      "value": "Incorrect",
                                    },
                                  },
                                ],
                              },
                              "id": null,
                              "type": "ObojoboDraft.Chunks.Text",
                            },
                          ],
                          "content": Object {},
                          "id": null,
                          "type": "ObojoboDraft.Chunks.MCAssessment.MCAnswer",
                        },
                      ],
                      "content": Object {
                        "score": 0,
                      },
                      "id": null,
                      "type": "ObojoboDraft.Chunks.MCAssessment.MCChoice",
                    },
                  ],
                  "content": Object {
                    "responseType": "pick-one",
                  },
                  "id": null,
                  "type": "ObojoboDraft.Chunks.MCAssessment",
                },
              ],
              "content": Object {},
              "id": null,
              "type": "ObojoboDraft.Chunks.Question",
            },
          ],
          "content": Object {
            "choose": 1,
            "select": "sequential",
          },
          "id": null,
          "type": "ObojoboDraft.Chunks.QuestionBank",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [],
                  "content": Object {
                    "textGroup": Array [
                      Object {
                        "data": null,
                        "text": Object {
                          "styleList": Array [],
                          "value": "Question Bank 2 Question 1 - This is the second question you'll see",
                        },
                      },
                    ],
                  },
                  "id": null,
                  "type": "ObojoboDraft.Chunks.Text",
                },
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "children": Array [],
                              "content": Object {
                                "textGroup": Array [
                                  Object {
                                    "data": null,
                                    "text": Object {
                                      "styleList": Array [],
                                      "value": "Correct",
                                    },
                                  },
                                ],
                              },
                              "id": null,
                              "type": "ObojoboDraft.Chunks.Text",
                            },
                          ],
                          "content": Object {},
                          "id": null,
                          "type": "ObojoboDraft.Chunks.MCAssessment.MCAnswer",
                        },
                      ],
                      "content": Object {
                        "score": 100,
                      },
                      "id": null,
                      "type": "ObojoboDraft.Chunks.MCAssessment.MCChoice",
                    },
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "children": Array [],
                              "content": Object {
                                "textGroup": Array [
                                  Object {
                                    "data": null,
                                    "text": Object {
                                      "styleList": Array [],
                                      "value": "Incorrect",
                                    },
                                  },
                                ],
                              },
                              "id": null,
                              "type": "ObojoboDraft.Chunks.Text",
                            },
                          ],
                          "content": Object {},
                          "id": null,
                          "type": "ObojoboDraft.Chunks.MCAssessment.MCAnswer",
                        },
                      ],
                      "content": Object {
                        "score": 0,
                      },
                      "id": null,
                      "type": "ObojoboDraft.Chunks.MCAssessment.MCChoice",
                    },
                  ],
                  "content": Object {
                    "responseType": "pick-one",
                  },
                  "id": null,
                  "type": "ObojoboDraft.Chunks.MCAssessment",
                },
              ],
              "content": Object {},
              "id": null,
              "type": "ObojoboDraft.Chunks.Question",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [],
                  "content": Object {
                    "textGroup": Array [
                      Object {
                        "data": null,
                        "text": Object {
                          "styleList": Array [],
                          "value": "Question Bank 2 Question 2 - This is the third question you'll see",
                        },
                      },
                    ],
                  },
                  "id": null,
                  "type": "ObojoboDraft.Chunks.Text",
                },
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "children": Array [],
                              "content": Object {
                                "textGroup": Array [
                                  Object {
                                    "data": null,
                                    "text": Object {
                                      "styleList": Array [],
                                      "value": "Correct",
                                    },
                                  },
                                ],
                              },
                              "id": null,
                              "type": "ObojoboDraft.Chunks.Text",
                            },
                          ],
                          "content": Object {},
                          "id": null,
                          "type": "ObojoboDraft.Chunks.MCAssessment.MCAnswer",
                        },
                      ],
                      "content": Object {
                        "score": 100,
                      },
                      "id": null,
                      "type": "ObojoboDraft.Chunks.MCAssessment.MCChoice",
                    },
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "children": Array [],
                              "content": Object {
                                "textGroup": Array [
                                  Object {
                                    "data": null,
                                    "text": Object {
                                      "styleList": Array [],
                                      "value": "Incorrect",
                                    },
                                  },
                                ],
                              },
                              "id": null,
                              "type": "ObojoboDraft.Chunks.Text",
                            },
                          ],
                          "content": Object {},
                          "id": null,
                          "type": "ObojoboDraft.Chunks.MCAssessment.MCAnswer",
                        },
                      ],
                      "content": Object {
                        "score": 0,
                      },
                      "id": null,
                      "type": "ObojoboDraft.Chunks.MCAssessment.MCChoice",
                    },
                  ],
                  "content": Object {
                    "responseType": "pick-one",
                  },
                  "id": null,
                  "type": "ObojoboDraft.Chunks.MCAssessment",
                },
              ],
              "content": Object {},
              "id": null,
              "type": "ObojoboDraft.Chunks.Question",
            },
          ],
          "content": Object {},
          "id": null,
          "type": "ObojoboDraft.Chunks.QuestionBank",
        },
      ],
      "content": Object {
        "choose": 1,
        "select": "sequential",
      },
      "id": null,
      "type": "ObojoboDraft.Chunks.QuestionBank",
    },
  ],
  "content": Object {},
  "id": null,
  "type": "ObojoboDraft.Modules.Module",
}
`;

exports[`XMLtoObject Converted table xml matches object 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "content": Object {
        "header": false,
        "textGroup": Object {
          "numCols": 1,
          "numRows": 1,
          "textGroup": Array [
            Object {
              "data": null,
              "text": Object {
                "styleList": Array [],
                "value": "test",
              },
            },
          ],
        },
      },
      "id": null,
      "type": "ObojoboDraft.Chunks.Table",
    },
    Object {
      "children": Array [],
      "content": Object {
        "header": true,
        "textGroup": Object {
          "numCols": 1,
          "numRows": 2,
          "textGroup": Array [
            Object {
              "data": null,
              "text": Object {
                "styleList": Array [],
                "value": "This is a test",
              },
            },
            Object {
              "data": null,
              "text": Object {
                "styleList": Array [],
                "value": "test",
              },
            },
          ],
        },
      },
      "id": null,
      "type": "ObojoboDraft.Chunks.Table",
    },
  ],
  "content": Object {},
  "id": null,
  "type": "ObojoboDraft.Modules.Module",
}
`;

exports[`XMLtoObject Converted text xml matches object 1`] = `
Object {
  "children": Array [],
  "content": Object {
    "textGroup": Array [
      Object {
        "data": null,
        "text": Object {
          "styleList": Array [],
          "value": "This is a test",
        },
      },
    ],
  },
  "id": null,
  "type": "ObojoboDraft.Chunks.Text",
}
`;

exports[`XMLtoObject Converted youtube xml matches object 1`] = `
Object {
  "children": Array [],
  "content": Object {
    "videoId": "test",
  },
  "id": null,
  "type": "Youtube",
}
`;
